@@ -6,7 +6,7 @@ optionmatrix \- GTK+ Financial Derivatives Calculator
 .B optionmatrix
 [\fI\,OPTION\/\fR] ...
 .SH DESCRIPTION
-Financial Derivatives Calculator featuring models from QuantLib, Program with no arguments will launch the Gtk+ Application.  See optionmatrix_console for the Curses Version.  Command line arguments can be used to list and test model execution time on the shell level.  Compiled with the following libraries: QuantLib, , GSL, Newmat, IT++.
+Financial Derivatives Calculator featuring models from QuantLib, Bjorn Augestad, Anthony Bradford, Bernt Arne Oedegaard, and Seth Pinsky.  Program with no arguments will launch the Gtk+ Application.  See optionmatrix_console for the Curses Version.  Command line arguments can be used to list and test model execution time on the shell level.  Compiled with the following libraries: QuantLib, MetaOptions, Financial Numerical Recipes in C++, GSL, Newmat, IT++.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 display this help and exit
